--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^8.12",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
-        "rebing/graphql-laravel": "^6.3"
+        "rebing/graphql-laravel": "^6.3",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
