--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "laravel/framework": "^8.12",
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
-        "rebing/graphql-laravel": "^6.3",
-        "tymon/jwt-auth": "^1.0"
+        "rebing/graphql-laravel": "^6.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
