--- a/.docker/nginx/conf.d/default.conf.dist
+++ b/.docker/nginx/conf.d/default.conf.dist
@@ -1,8 +1,10 @@
 server {
     listen 80;
-    server_name host;
+    server_name _;
     root /home/docker/public;
     index index.php index.html;
+
+    server_tokens off;
 
     rewrite ^/(.*)/$ /$1 permanent;
 
@@ -11,7 +13,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
-        autoindex on;
+        autoindex off;
     }
 
     location ~ \.php$ {
