--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Domain\\": "src/Domain",
+            "Support\\": "src/Support",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
