--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "rebing/graphql-laravel": "^8.2.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^6.0",
